# pupper-talk

./: .env.example  .gitignore  CLAUDE.md  README.en.md  README.md  pyproject.toml  skill-creation-prompts.md
core/: audio.py  audio_router.py  camera.py  hotword.py  stream.py
core/modes/: __init__.py  base.py  bumblebee.py  code.py  live.py  quiz.py  rocky.py  sentiment.py  vision.py
docs/superpowers/plans/: 2026-04-09-gemini-switch-mode-fallback.md
on_device/: __main__.py  gif_display.py  robot_motion.py
scripts/: gen_ready_wavs.py
skills/gemini-live-api/: SKILL.md
skills/mini-pupper-2/: SKILL.md
songs/: catalog.yaml
using_bridge/: __main__.py  bridge_client.py
