[project]
name = "pupper-talk"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = [
    "google-genai>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pygame>=2.5.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "opencv-python-headless>=4.8.0",
    "pydub>=0.25.1",
    "pyyaml>=6.0",
    "vosk>=0.3.45; sys_platform == 'linux'",
    "loguru>=0.6.0",
    "spidev>=3.0; sys_platform == 'linux'",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "on_device", "using_bridge"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
